@@ -1,3 +1,9 @@
+2009-09-21  Jan Hubicka  <jh@suse.cz>
+
+	* dwarf2out.c (decl_loc_table_eq): Allow decl_loc_table to be NULL.
+	(dwarf2out_abstract_function): NULLify decl_loc_table at begginig and
+	restore at the end.
+
 2009-09-21  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* stor-layout.c (layout_type): Remove obsolete code.
